# glFractals

./: CMakeLists.txt  README.md
dep/glad/include/glad/: glad.h
dep/glad/src/: glad.c
src/: Common.hpp  Event.hpp  Main.cpp  Utils.cpp  Utils.hpp
src/controllers/: JuliaController.cpp  JuliaController.hpp  MandelbrotController.cpp  MandelbrotController.hpp  StateController.hpp
src/framework/: ButtonState.hpp  CloseListener.hpp  Framework.cpp  Framework.hpp  KeyListener.hpp  MouseListener.hpp  ResolutionChangeListener.hpp
src/gl/: FractalRenderer.cpp  FractalRenderer.hpp  FreeTypeWrapper.cpp  FreeTypeWrapper.hpp  Shader.cpp  Shader.hpp  TextRenderer.cpp  TextRenderer.hpp  gl_utils.h
src/shaders/: Fractal.vs  Julia.fs  Mandelbrot.fs  Text.fs  Text.vs
